--- a/public_html/wp-content/themes/daily-dish-pro/style-front-page.css
+++ b/public_html/wp-content/themes/daily-dish-pro/style-front-page.css
@@ -165,11 +165,11 @@ Checkmarks
   flex-flow: row nowrap;
   justify-content: center;
   --gap: 5rem;
-  margin: calc(-1 * var(--gap)) calc(-1 * var(--gap)) 0 0 !important;
+  margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap)) !important;
 }
 
 .checkmarks__list > * {
-  margin: var(--gap) var(--gap) 0 0 !important;
+  margin: var(--gap) 0 0 var(--gap) !important;
 }
 
 .checkmarks__item {
